# sonomkr-core

./: .gitignore  CMakeLists.txt  README.md  SonoMKR.service  antialiasingfilter.h  audiobuffer.cpp  audiobuffer.h  biquadfilter.cpp  configuration.cpp  configuration.h  configure.ac  defines.h  filters.conf  iirfilter.h  install.sh  leqfilter.h  main.cpp  maincontroller.cpp  ringbufferconsumer.cpp  sinegenerator.h  sonomkr-core.files  sonomkr-core.pro  sonomkr.conf  spectrum.cpp  spectrum.h  spectrumchannel.cpp  spectrumchannel.h
Dbus/: fr.sonomkr.channel.xml  fr.sonomkr.controller.xml  sonomkr-dbus-interface.xml
Dbus/Adaptors/: channel.h  controller.h
Shared/: dbus_vtable.hpp  ringbuffer.cpp  ringbuffer.h  ringbufferconsumer.cpp  ringbufferconsumer.h
SignalProcessing/: antialiasingfilter.cpp  antialiasingfilter.h  audiobuffer.cpp  audiobuffer.h  audiocapture.cpp  audiocapture.h  biquadfilter.cpp  biquadfilter.h  iirfilter.cpp  iirfilter.h  leq.cpp  leq.h  leqfilter.cpp  leqfilter.h  sinegenerator.cpp  sinegenerator.h  sos_coefficients.cpp  sos_coefficients.h
conf/: sonomkr.conf
src/: Makefile.am  antialiasingfilter.cpp  antialiasingfilter.h  audiobuffer.cpp  audiobuffer.h  audiocapture.cpp  audiocapture.h  biquadfilter.cpp  biquadfilter.h  configuration.cpp  configuration.h  defines.h  iirfilter.cpp  iirfilter.h  leqfilter.cpp  leqfilter.h  main.cpp  maincontroller.cpp  maincontroller.h  ringbuffer.cpp  ringbuffer.h  ringbufferconsumer.cpp  ringbufferconsumer.h  sinegenerator.cpp  sinegenerator.h  spectrum.cpp  spectrum.h  spectrumchannel.cpp  spectrumchannel.h
